# bot2020_pkg

./: CMakeLists.txt  README.md  package.xml
config/: bot2020.yaml  rover5.yaml
launch/: start_bot2020.launch  start_rover5.launch
src/: bot2020_node.cpp
